tests/ui/err/has-no-argument.stderr
error: custom attribute panicked
 --> tests/ui/err/has-no-argument.rs:1:1
  |
1 | #[logcall::logcall]
  | ^^^^^^^^^^^^^^^^^^^
  |
  = help: message: `logcall`: when annotating with #[logcall(...)], ingress/egress log level parameters should be provided, otherwise the annotation would have no effect
